force-app/main/default/objects/Credit_Note__c/Credit_Note__c.object-meta.xml
<CustomObject>
    <label>Credit/Debit Note</label>
    <nameField>
        <displayFormat>DCN-{00000000}</displayFormat>
        <label>Credit/Debit Note No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit/Debit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>