force-app/main/default/objects/Credit_Note__c/fields/Amount_excl_GST__c.field-meta.xml
<CustomField>
    <fullName>Amount_excl_GST__c</fullName>
    <formula>Debit_Credit_Note_Amount__c -  GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount excl. GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>