force-app/main/default/objects/Credit_Note__c/fields/COE__c.field-meta.xml
<CustomField>
    <fullName>COE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COE</label>
    <referenceTo>COE__c</referenceTo>
    <relationshipLabel>Credit/Debit Notes</relationshipLabel>
    <relationshipName>Credit_Debit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>