force-app/main/default/objects/Credit_Note__c/fields/Credit_Debit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Debit__c</fullName>
    <label>Credit/Debit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>