force-app/main/default/objects/Credit_Note__c/fields/Credit_Debit_Note_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Credit_Debit_Note_Remarks__c</fullName>
    <label>Credit/Debit Note Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>