force-app/main/default/objects/Credit_Note__c/fields/Credit_Debit_Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Debit_Note_Type__c</fullName>
    <label>Credit/Debit Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Credit_Debit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTHER PAYMENT WITH GST</fullName>
            </value>
            <value>
                <fullName>FULLY FORFEIT DEPOSIT (NOT UPDATE AR)</fullName>
            </value>
            <value>
                <fullName>COE BUY BACK</fullName>
            </value>
            <value>
                <fullName>OTHERS WITHOUT GST</fullName>
            </value>
            <value>
                <fullName>REFUND OF DEPOSIT (NOT UPDATE AR)</fullName>
            </value>
            <value>
                <fullName>USED CAR FINANCE LOAN REDEMTION REVERSAL</fullName>
            </value>
            <value>
                <fullName>FORFEIT DEPOSIT (UPDATE AR) REVERSAL</fullName>
            </value>
            <value>
                <fullName>USED CAR FINANCE LOAN REDEMPTION(W/T AGMT) REV.</fullName>
            </value>
            <value>
                <fullName>USED CAR TRADE IN (WITHOUT AGREEMENT LINK)</fullName>
            </value>
            <value>
                <fullName>USED CAR TRADE IN</fullName>
            </value>
            <value>
                <fullName>COE SALES</fullName>
            </value>
            <value>
                <fullName>OTHERS WITH GST</fullName>
            </value>
            <value>
                <fullName>FULLY FORFEIT DEPOSIT (NOT UPDATE AR) REVERSAL</fullName>
            </value>
            <value>
                <fullName>USED CAR FINANCE LOAN REDEMPTION(W/T AGMT.)</fullName>
            </value>
            <value>
                <fullName>USED CAR TRADE IN REVERSAL (WITHOUT AGREEMENT)</fullName>
            </value>
            <value>
                <fullName>REVERSAL USED CAR TRADE IN</fullName>
            </value>
            <value>
                <fullName>USED CAR FINANCE LOAN REDEMPTION</fullName>
            </value>
            <value>
                <fullName>FORFEIT DEPOSIT (UPDATE AR)</fullName>
            </value>
            <value>
                <fullName>CANCEL REFUND OF DEPOSIT (NOT UPDATE AR)</fullName>
            </value>
            <value>
                <fullName>REVERSAL COE BUY BACK</fullName>
            </value>
            <value>
                <fullName>REFUND OF DEPOSIT</fullName>
            </value>
            <value>
                <fullName>COE_BUY_BACK_REVERSAL</fullName>
                <label>COE BUY BACK REVERSAL</label>
            </value>
            <value>
                <fullName>VOID VEHICLE DEPOSIT</fullName>
            </value>
            <value>
                <fullName>VOID COE DEPOSIT</fullName>
            </value>
            <value>
                <fullName>VOID BALANCE PAYMENT</fullName>
            </value>
            <value>
                <fullName>CASH REBATE ON LOAN (B2)</fullName>
                <isActive>false</isActive>
                <label>CASH REBATE ON LOAN (B2)</label>
            </value>
            <value>
                <fullName>CN: ADDITIONAL DISCOUNT (B2)</fullName>
                <isActive>false</isActive>
                <label>CN: ADDITIONAL DISCOUNT (B2)</label>
            </value>
            <value>
                <fullName>CN: ADVERTISING (B2)</fullName>
                <isActive>false</isActive>
                <label>CN: ADVERTISING (B2)</label>
            </value>
            <value>
                <fullName>CN: C&amp;C - COE REBATE (B2)</fullName>
                <isActive>false</isActive>
                <label>CN: C&amp;C - COE REBATE (B2)</label>
            </value>
            <value>
                <fullName>CN: C&amp;C - PARF REBATE (B2)</fullName>
                <isActive>false</isActive>
                <label>CN: C&amp;C - PARF REBATE (B2)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>