force-app/main/default/objects/Credit_Note__c/fields/DB_CR_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>DB_CR_Note_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Debit/Credit Note Date</label>
    <type>Date</type>
</CustomField>