force-app/main/default/objects/Credit_Note__c/fields/Debit_Credit_Note_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debit_Credit_Note_Amount__c</fullName>
    <label>Debit/Credit Note Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>