force-app/main/default/objects/Credit_Note__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>