force-app/main/default/objects/Credit_Note__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipLabel>Credit/Debit Notes</relationshipLabel>
    <relationshipName>Credit_Debit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>