force-app/main/default/objects/Credit_Note__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice</label>
    <referenceTo>Sales_Invoice__c</referenceTo>
    <relationshipLabel>Credit/Debit Notes</relationshipLabel>
    <relationshipName>Credit_Debit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>