force-app/main/default/objects/Credit_Note__c/fields/Update_AR__c.field-meta.xml
<CustomField>
    <fullName>Update_AR__c</fullName>
    <label>Update AR?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Credit_Debit_Note_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>