force-app/main/default/objects/Credit_Note__c/fields/Voided_Payment_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Voided_Payment_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voided Payment Receipt</label>
    <referenceTo>Payment_Receipt__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>