force-app/main/default/objects/Credit_Note__c/validationRules/COE_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>COE_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CONTAINS(TEXT(Credit_Debit_Note_Type__c), &apos;COE&apos;),ISBLANK( COE__c ))</errorConditionFormula>
    <errorDisplayField>COE__c</errorDisplayField>
    <errorMessage>If Credit Debit Note Type contains &quot;COE&quot;, COE cannot be blank.</errorMessage>
</ValidationRule> 
 