force-app/main/default/objects/Credit_Note__c/validationRules/Issue_Date_can_not_be_back_dated.validationRule-meta.xml
<ValidationRule>
    <fullName>Issue_Date_can_not_be_back_dated</fullName>
    <active>true</active>
    <description>Issue Date can not be back dated.
Only users in Accounts Profile and System Admin can backdate.</description>
    <errorConditionFormula>AND(OR (ISNEW(), ISCHANGED( DB_CR_Note_Date__c )), 
DB_CR_Note_Date__c  &lt;  TODAY(),$Profile.Name &lt;&gt; &quot;Accounts Profile&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;System Admin&quot;)</errorConditionFormula>
    <errorDisplayField>DB_CR_Note_Date__c</errorDisplayField>
    <errorMessage>Issue_Date can not be back dated.</errorMessage>
</ValidationRule>