force-app/main/default/objects/Credit_Note__c/validationRules/Issue_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Issue_Date_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(DB_CR_Note_Date__c))</errorConditionFormula>
    <errorDisplayField>DB_CR_Note_Date__c</errorDisplayField>
    <errorMessage>Issue Date  can not be emptied</errorMessage>
</ValidationRule>